fix(app-modal): add z-index to overlap content

--- a/src/components/app-modal/app-modal.component.scss
+++ b/src/components/app-modal/app-modal.component.scss
@@ -6,6 +6,7 @@
   bottom: 0;
   width: 100%;
   height: 100vh;
+  z-index: 9999;
 }
 
 .overlay {
